syntax="proto3";

package notification;

option go_package="github.com/tehrelt/mu/proto/notification;notificationpb";

service NotificationService {

    rpc Integrations(IntegrationsRequest) returns (IntegrationsResponse);

    rpc TelegramOtp(TelegramOtpRequest) returns (TelegramOtpResponse);
    rpc LinkTelegram(LinkTelegramRequest) returns (LinkTelegramResponse);
    rpc UnlinkTelegram(UnlinkTelegramRequest) returns (UnlinkTelegramResponse);
}


message IntegrationsRequest {
    string user_id = 1;
}

message IntegrationsResponse {
    string telegram_chat_id = 1;
}

message LinkTelegramRequest {
    string user_id = 1;
    string chat_id = 2;
    string otp = 3;
}

message LinkTelegramResponse {
}

message UnlinkTelegramRequest {
    string user_id = 1;
}

message UnlinkTelegramResponse {
}

message TelegramOtpRequest {
    string user_id = 1;
}

message TelegramOtpResponse {
    string otp = 1;
}
